got rid of comments on CSS

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
     </section>
     <br><br>
-    <div class="separated"></div>
+    <div class="separated container"></div>
     <!-- NOTE Projects -->
     <div class="container">
         <div id="projects">
