deleted extra images

--- a/index.html
+++ b/index.html
@@ -378,23 +378,23 @@
                 <!-- Container -->
                 <div class="project-container">
 
-                    <a href="1.png" class="project-box app" data-lightbox="work">
-                        <img src="./images/1.png" alt="work">
+                    <a href="" class="project-box app" data-lightbox="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                     <a href="2.png" class="project-box web" data-lightbox="work">
-                        <img src="./images/2.png" alt="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                     <a href="3.png" class="project-box ai" data-lightbox="work">
-                        <img src="./images/3.png" alt="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                     <a href="4.png" class="project-box design" data-lightbox="work">
-                        <img src="./images/4.png" alt="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                     <a href="5.png" class="project-box design" data-lightbox="work">
-                        <img src="./images/5.png" alt="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                     <a href="19.png" class="project-box web" data-lightbox="work">
-                        <img src="./images/19.png" alt="work">
+                        <!-- <img src="./images/" alt="work"> -->
                     </a>
                 </div>
             </section>
