--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
         <div id="projects">
             <div class="title">
                 <h3>See My Projects</h3>
+                <div class="text-center">
+                    <p>Coming soon...</p>
+                </div>
             </div>
             <!-- Project Sections -->
             <section class="project" id="project">
