changed the profile picture

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-4">
                     <div class="about-me">
                         <div class="img" data-wow-duration="0.5s">
-                            <img src="./images/background.jpg" alt="">
+                            <img src="./images/profile-pic.HEIC" alt="">
                         </div>
                         <div class="nav social-icons justify-content-center">
                             <a href="https://github.com/tsuyosi81" target="_blank">
