--- a/index.html
+++ b/index.html
@@ -365,9 +365,6 @@
     <section class="project" id="project">
         <div class="title">
             <h3>See My Projects</h3>
-            <div class="text-center">
-                <p>Coming soon...</p>
-            </div>
         </div>
         <!-- Project Sections -->
 
@@ -377,28 +374,43 @@
             <li class="list" data-filter="app">Application</li>
             <li class="list" data-filter="design">App Design</li>
             <li class="list" data-filter="web">Website Design</li>
-            <li class="list" data-filter="ai">AI</li>
         </ul>
         <!-- Container -->
         <div class="project-container">
 
-            <a href="" class="project-box app" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+
+            <a href="3.png" class="project-box ai" data-lightbox="work">
+                <img src="./images/calculator-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Calculator
+                    </div>
+                </div>
             </a>
             <a href="2.png" class="project-box web" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+                <img src="./images/piggame-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Pig Game
+                    </div>
+                </div>
             </a>
-            <a href="3.png" class="project-box ai" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+            <a href="" class="project-box app" data-lightbox="work">
+                <img src="./images/portfolio-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Portfolio Website
+                    </div>
+                </div>
             </a>
             <a href="4.png" class="project-box design" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+                <!-- <img src="./images/" alt="work" class="image"> -->
             </a>
             <a href="5.png" class="project-box design" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+                <!-- <img src="./images/" alt="work" class="image"> -->
             </a>
             <a href="19.png" class="project-box web" data-lightbox="work">
-                <!-- <img src="./images/" alt="work"> -->
+                <!-- <img src="./images/" alt="work" class="image"> -->
             </a>
         </div>
     </section>
