--- a/index.html
+++ b/index.html
@@ -277,37 +277,38 @@
     <section class="mh-skills wow zoomIn" id="skills">
         <div class="container">
             <div class="row">
+
+
                 <div class="col-md-6">
+                    <div class="title">
+                        <h3>Experience & Skills</h3>
+                    </div>
                     <div class="resume-box">
-                        <div class="title">
-                            <h3>Experience & Skills</h3>
-                        </div>
-                        <div c lass="row">
-                            <div class="col-lg-4">
-                                <ul class="education-box">
-                                    <li>
-                                        <span>Company: i.c.stars |* Milwaukee</span> <br>
-                                        <span>July 2021 - Present</span>
-                                        <h6>Resident, Technical Analyst Intern</h6>
-                                        <p>i.c.stars' rigorous four-month technology trainning and leadership program
-                                            offers 1,000+ hours of immersice, hands-on,
-                                            prject-based learning in a fast-paced Agile enviroment. I was the part of
-                                            cycle 8, where I was considered as one of the
-                                            top performers in the cycle, mainly on the technical front. During my time
-                                            at i.c.stars, I've extablished myself as a
-                                            leader where I have helped almost everyone within the cycle with at least 1
-                                            problem, even the staff. Being a resident,
-                                            my role now is to develop more leaders in the upcoming Cycle 9 by teaching
-                                            JavaScript, React, and mentoring one of the
-                                            interns.</p>
-                                    </li>
-                                    <br><br><br>
-                            </div>
+                        <div class="col-lg-4">
+                            <ul class="education-box">
+                                <li>
+                                    <span>Company: i.c.stars |* Milwaukee</span> <br>
+                                    <span>July 2021 - Present</span>
+                                    <h6>Resident, Technical Analyst Intern</h6>
+                                    <p>i.c.stars' rigorous four-month technology trainning and leadership program
+                                        offers 1,000+ hours of immersice, hands-on,
+                                        prject-based learning in a fast-paced Agile enviroment. I was the part of
+                                        cycle 8, where I was considered as one of the
+                                        top performers in the cycle, mainly on the technical front. During my time
+                                        at i.c.stars, I've extablished myself as a
+                                        leader where I have helped almost everyone within the cycle with at least 1
+                                        problem, even the staff. Being a resident,
+                                        my role now is to develop more leaders in the upcoming Cycle 9 by teaching
+                                        JavaScript, React, and mentoring one of the
+                                        interns.</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="mh-professional-skills">
+                    <!-- <div class="mh-professional-skills"> -->
+                    <div class="title">
                         <h3>Technical Skills</h3>
                     </div>
                     <div class="skill-bars">
@@ -353,10 +354,9 @@
                         </div>
                     </div>
 
-                    </ul>
+
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <br><br>
@@ -366,7 +366,6 @@
         <div class="title">
             <h3>See My Projects</h3>
         </div>
-        <!-- Project Sections -->
 
         <!-- filter -->
         <ul class="project-filter">
