--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="col-lg-4 wow bounceInUp">
-                <div class="box1">
+                <div class="box1 box2">
                     <i class="icon icon-desktop"></i>
                     <div class="content">
                         <br>
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="col-lg-4 wow bounceInRight">
-                <div class="box1">
+                <div class="box1 box2">
                     <i class="icon icon-target"></i>
                     <div class="content">
                         <br>
