--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             </li>
         </ul>
     </header>
+
     <!-- NOTE Home -->
     <main>
         <section class="banner" data-wow-duration="0.5s" data-wow-delay="1s" id="home" pt-page pt-page-1>
@@ -127,6 +128,10 @@
                         <div class="img" data-wow-duration="0.5s">
                             <img src="./images/profile-pic.HEIC" alt="">
                         </div>
+                        <div class="info">
+                            <p>Web Developer</p>
+                            <h3>Tsuyoshi Harayama</h3>
+                        </div>
                         <div class="nav social-icons justify-content-center">
                             <a href="https://github.com/tsuyosi81" target="_blank">
                                 <i class="fa fa-github"></i>
@@ -142,11 +147,6 @@
                             </a>
                         </div>
                     </div>
-
-                    <div class="info">
-                        <p>Web Developer</p>
-                        <h3>Tsuyoshi Harayama</h3>
-                    </div>
                 </div>
                 <div class="col-lg-7 ml-auto">
                     <div class="about-info">
@@ -154,7 +154,7 @@
                             <h3>About Me</h3>
                         </div>
                         <br><br>
-                        <div class="">
+                        <div class='bio'>
                             <p>
                                 My name is Tsuyoshi Harayama. I was born and raised in Japan, graduated from boot camp,
                                 and a self-taught programmer
@@ -213,12 +213,12 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <div class="separated"></div>
     </section>
+    <br><br>
+    <div class="separated"></div>
     <div class="container" id="work">
         <!-- NOTE Works -->
-        <div class="title text-white">
+        <div class="title">
             <h3>What I do ?</h3>
         </div>
         <br><br><br>
@@ -269,267 +269,9 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <div class="separated"></div>
     </div>
-    <!-- NOTE Skills -->
-    <section class="mh-skills wow zoomIn" id="skills">
-        <div class="container">
-            <div class="row">
-
-
-                <div class="col-md-6">
-                    <div class="title">
-                        <h3>Experience & Skills</h3>
-                    </div>
-                    <div class="resume-box">
-                        <div class="col-lg-4">
-                            <ul class="education-box">
-                                <li>
-                                    <span>Company: i.c.stars |* Milwaukee</span> <br>
-                                    <span>July 2021 - Present</span>
-                                    <h6>Resident, Technical Analyst Intern</h6>
-                                    <p>i.c.stars' rigorous four-month technology trainning and leadership program
-                                        offers 1,000+ hours of immersice, hands-on,
-                                        prject-based learning in a fast-paced Agile enviroment. I was the part of
-                                        cycle 8, where I was considered as one of the
-                                        top performers in the cycle, mainly on the technical front. During my time
-                                        at i.c.stars, I've extablished myself as a
-                                        leader where I have helped almost everyone within the cycle with at least 1
-                                        problem, even the staff. Being a resident,
-                                        my role now is to develop more leaders in the upcoming Cycle 9 by teaching
-                                        JavaScript, React, and mentoring one of the
-                                        interns.</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <!-- <div class="mh-professional-skills"> -->
-                    <div class="title">
-                        <h3>Technical Skills</h3>
-                    </div>
-                    <div class="skill-bars">
-                        <div class="bar">
-                            <div class="info">
-                                <span>HTML</span>
-                            </div>
-                            <div class="progress-line html">
-                                <span></span>
-                            </div>
-                        </div>
-                        <div class="bar">
-                            <div class="info">
-                                <span>CSS</span>
-                            </div>
-                            <div class="progress-line css">
-                                <span></span>
-                            </div>
-                        </div>
-                        <div class="bar">
-                            <div class="info">
-                                <span>JavaScript</span>
-                            </div>
-                            <div class="progress-line javascript">
-                                <span></span>
-                            </div>
-                        </div>
-                        <div class="bar">
-                            <div class="info">
-                                <span>React.js</span>
-                            </div>
-                            <div class="progress-line react">
-                                <span></span>
-                            </div>
-                        </div>
-                        <div class="bar">
-                            <div class="info">
-                                <span>SQL</span>
-                            </div>
-                            <div class="progress-line sql">
-                                <span></span>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-        <br><br>
-        <div class="separated"></div>
-    </section>
-    <!-- NOTE Projects -->
-    <section class="project" id="project">
-        <div class="title">
-            <h3>See My Projects</h3>
-        </div>
-
-        <!-- filter -->
-        <ul class="project-filter">
-            <li class="list project-filter-active" data-filter="all">All</li>
-            <li class="list" data-filter="app">Application</li>
-            <li class="list" data-filter="design">App Design</li>
-            <li class="list" data-filter="web">Website Design</li>
-        </ul>
-        <!-- Container -->
-        <div class="project-container">
-
-
-            <a href="3.png" class="project-box ai" data-lightbox="work">
-                <img src="./images/calculator-project.png" alt="work" class="image">
-                <div class="middle">
-                    <div class="text">
-                        Calculator
-                    </div>
-                </div>
-            </a>
-            <a href="2.png" class="project-box web" data-lightbox="work">
-                <img src="./images/piggame-project.png" alt="work" class="image">
-                <div class="middle">
-                    <div class="text">
-                        Pig Game
-                    </div>
-                </div>
-            </a>
-            <a href="" class="project-box app" data-lightbox="work">
-                <img src="./images/portfolio-project.png" alt="work" class="image">
-                <div class="middle">
-                    <div class="text">
-                        Portfolio Website
-                    </div>
-                </div>
-            </a>
-            <a href="4.png" class="project-box design" data-lightbox="work">
-                <!-- <img src="./images/" alt="work" class="image"> -->
-            </a>
-            <a href="5.png" class="project-box design" data-lightbox="work">
-                <!-- <img src="./images/" alt="work" class="image"> -->
-            </a>
-            <a href="19.png" class="project-box web" data-lightbox="work">
-                <!-- <img src="./images/" alt="work" class="image"> -->
-            </a>
-        </div>
-        <div class="separated"></div>
-    </section>
-    <!-- NOTE Contact -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="contact-info">
-                        <h4>Let's get in touch!</h4>
-                        <p>
-                            Always available for freelancing if the right project comes along, Feel free to
-                            contact me.
-                        </p>
-                        <ul>
-                            <li class="media">
-                                <i class="fa fa-map"></i>
-                                <span class="media-body">
-                                    11221 Synergy Dr Ste 410, Wauwatosa, WI 53222
-                                </span>
-                            </li>
-                            <li class="media">
-                                <i class="fa fa-envelope"></i>
-                                <span class="media-body">
-                                    tharayama@icstars.org
-                                </span>
-                            </li>
-                            <li class="media">
-                                <i class="fa fa-map"></i>
-                                <span class="media-phone">
-                                    +1(224) 944-1454
-                                </span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="contact-form">
-                        <h4>Say something</h4>
-                        <form action="https://formsubmit.co/tharayama@icstars.org" method="POST">
-                            <div class="row">
-                                <input type="hidden" name="_next" value="https://yourdomain.co/thankyou.html">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" name="Name" id="name" placeholder="Name *"
-                                            class="form-control name" required>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="email" name="Email" id="email" placeholder="Email *"
-                                            class="form-control email" required>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <input type="text" name="Subject" id="subject" placeholder="Subject *"
-                                            class="form-control subject" required>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea name="Message" id="messange" placeholder="Your Messages *" rows="5"
-                                            class="form-control" required></textarea>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="send">
-                                        <button class="btn btn-primary submit" type="submit" value="send">
-                                            Send message
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br><br>
-        <!-- NOTE Google Map -->
-        <div class="col-12">
-            <div class="google-map container">
-                <div class="embed-responsive embed">
-                    <p>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2914.3353460951184!2d-88.0555583839864!3d43.07644467914521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050594799e5e11%3A0x2a3c104f455d8594!2sSynergy%20at%20the%20Mayfair%20Collection!5e0!3m2!1sen!2sus!4v1646775820839!5m2!1sen!2sus"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <br><br><br>
-    <!-- NOTE Footer -->
-    <footer class="footer wow zoomIn">
-        <!-- <div class="container"> -->
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <div class="nav justify-content-center justify-content-md-start">
-                    <a href="https://github.com/tsuyosi81" target="_blank">
-                        <i class="fa fa-github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/tsuyoshi-harayama-051082218/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
-                    <a href="https://www.instagram.com/tsuyosi81/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                    <a href="https://www.facebook.com/tsuyoshi.harayama.965" target="_blank">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-6 text-center text-md-right">
-                <p> &copy; 2022 Copyright all right reserved </p>
-            </div>
-        </div>
-    </footer>
-    </div>
+    <br><br>
+    <div class="separated"></div>
 </body>
 
 </html>
