--- a/index.html
+++ b/index.html
@@ -360,6 +360,179 @@
         <br><br>
         <div class="separated"></div>
     </section>
+    <!-- NOTE Projects -->
+    <section class="project" id="project">
+        <div class="title">
+            <h3>See My Projects</h3>
+        </div>
+
+        <!-- filter -->
+        <ul class="project-filter">
+            <li class="list project-filter-active" data-filter="all">All</li>
+            <li class="list" data-filter="app">Application</li>
+            <li class="list" data-filter="design">App Design</li>
+            <li class="list" data-filter="web">Website Design</li>
+        </ul>
+        <!-- Container -->
+        <div class="project-container">
+
+
+            <a href="3.png" class="project-box ai" data-lightbox="work">
+                <img src="./images/calculator-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Calculator
+                    </div>
+                </div>
+            </a>
+            <a href="2.png" class="project-box web" data-lightbox="work">
+                <img src="./images/piggame-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Pig Game
+                    </div>
+                </div>
+            </a>
+            <a href="" class="project-box app" data-lightbox="work">
+                <img src="./images/portfolio-project.png" alt="work" class="image">
+                <div class="middle">
+                    <div class="text">
+                        Portfolio Website
+                    </div>
+                </div>
+            </a>
+            <a href="4.png" class="project-box design" data-lightbox="work">
+                <!-- <img src="./images/" alt="work" class="image"> -->
+            </a>
+            <a href="5.png" class="project-box design" data-lightbox="work">
+                <!-- <img src="./images/" alt="work" class="image"> -->
+            </a>
+            <a href="19.png" class="project-box web" data-lightbox="work">
+                <!-- <img src="./images/" alt="work" class="image"> -->
+            </a>
+        </div>
+    </section>
+    <div class="separated"></div>
+    <!-- NOTE Contact -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="contact-info">
+                        <div class="title">
+                            <h4>Let's get in touch!</h4>
+                        </div>
+                        <div class="contact-me">
+                            <p>
+                                Always available for freelancing if the right project comes along, Feel free to
+                                contact me.
+                            </p>
+                        </div>
+                        <ul>
+                            <li class="media">
+                                <i class="fa fa-map"></i>
+                                <span class="media-body">
+                                    11221 Synergy Dr Ste 410, Wauwatosa, WI 53222
+                                </span>
+                            </li>
+                            <li class="media">
+                                <i class="fa fa-envelope"></i>
+                                <span class="media-body">
+                                    tharayama@icstars.org
+                                </span>
+                            </li>
+                            <li class="media">
+                                <i class="fa fa-map"></i>
+                                <span class="media-phone">
+                                    +1(224) 944-1454
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="contact-form">
+                        <h4>Say something</h4>
+                        <form action="https://formsubmit.co/tharayama@icstars.org" method="POST">
+                            <div class="row">
+                                <input type="hidden" name="_next" value="https://yourdomain.co/thankyou.html">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" name="Name" id="name" placeholder="Name *"
+                                            class="form-control name" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="email" name="Email" id="email" placeholder="Email *"
+                                            class="form-control email" required>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <input type="text" name="Subject" id="subject" placeholder="Subject *"
+                                            class="form-control subject" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea name="Message" id="messange" placeholder="Your Messages *" rows="5"
+                                            class="form-control" required></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="send">
+                                        <button class="btn btn-primary submit" type="submit" value="send">
+                                            Send message
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <!-- NOTE Google Map -->
+        <div class="col-12">
+            <div class="google-map container">
+                <div class="embed-responsive embed">
+                    <p>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2914.3353460951184!2d-88.0555583839864!3d43.07644467914521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050594799e5e11%3A0x2a3c104f455d8594!2sSynergy%20at%20the%20Mayfair%20Collection!5e0!3m2!1sen!2sus!4v1646775820839!5m2!1sen!2sus"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br><br><br>
+    <!-- NOTE Footer -->
+    <footer class="footer wow zoomIn">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="nav justify-content-center justify-content-md-start">
+                        <a href="https://github.com/tsuyosi81" target="_blank">
+                            <i class="fa fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/tsuyoshi-harayama-051082218/" target="_blank">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                        <a href="https://www.instagram.com/tsuyosi81/" target="_blank">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.facebook.com/tsuyoshi.harayama.965" target="_blank">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center text-md-right">
+                    <p> &copy; 2022 Copyright all right reserved </p>
+                </div>
+            </div>
+    </footer>
 </body>
 
 </html>
