added project pages

--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
             <div class="project-container">
 
 
-                <a href="3.png" class="project-box ai" data-lightbox="work">
+                <a href="https://rococo-shortbread-e6146b.netlify.app/" target="blank" class="project-box ai"
+                    data-lightbox="work">
                     <img src="./images/calculator-project.png" alt="work" class="image">
                     <div class="middle">
                         <div class="text">
@@ -389,7 +390,8 @@
                         </div>
                     </div>
                 </a>
-                <a href="2.png" class="project-box web" data-lightbox="work">
+                <a href="https://stellar-phoenix-be2467.netlify.app/" target="blank" class="project-box web"
+                    data-lightbox="work">
                     <img src="./images/piggame-project.png" alt="work" class="image">
                     <div class="middle">
                         <div class="text">
@@ -397,7 +399,8 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="project-box app" data-lightbox="work">
+                <a href="https://boring-thompson-fde54b.netlify.app/" target="blank" class="project-box app"
+                    data-lightbox="work">
                     <img src="./images/portfolio-project.png" alt="work" class="image">
                     <div class="middle">
                         <div class="text">
