added project-filter featuers

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.0/jquery-migrate.min.js"></script>
-    <script src="jquery.stapel.js"></script>
     <script src="./main.js"></script>
+    <script src="jquery.stapel.js"></script>
 </head>
 
 <body>
@@ -373,15 +373,15 @@
             <!-- filter -->
             <ul class="project-filter">
                 <li class="list project-filter-active" data-filter="all">All</li>
+                <li class="list" data-filter="web">Website</li>
                 <li class="list" data-filter="app">Application</li>
-                <li class="list" data-filter="design">App Design</li>
-                <li class="list" data-filter="web">Website Design</li>
+                <li class="list" data-filter="design">Design</li>
             </ul>
             <!-- Container -->
             <div class="project-container">
 
 
-                <a href="https://rococo-shortbread-e6146b.netlify.app/" target="blank" class="project-box ai"
+                <a href="https://rococo-shortbread-e6146b.netlify.app/" target="blank" class="project-box web"
                     data-lightbox="work">
                     <img src="./images/calculator-project.png" alt="work" class="image">
                     <div class="middle">
@@ -399,7 +399,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://boring-thompson-fde54b.netlify.app/" target="blank" class="project-box app"
+                <a href="https://boring-thompson-fde54b.netlify.app/" target="blank" class="project-box web"
                     data-lightbox="work">
                     <img src="./images/portfolio-project.png" alt="work" class="image">
                     <div class="middle">
@@ -408,13 +408,13 @@
                         </div>
                     </div>
                 </a>
-                <a href="4.png" class="project-box design" data-lightbox="work">
+                <a href="4.png" class="project-box" data-lightbox="work">
                     <!-- <img src="./images/" alt="work" class="image"> -->
                 </a>
-                <a href="5.png" class="project-box design" data-lightbox="work">
+                <a href="5.png" class="project-box" data-lightbox="work">
                     <!-- <img src="./images/" alt="work" class="image"> -->
                 </a>
-                <a href="19.png" class="project-box web" data-lightbox="work">
+                <a href="19.png" class="project-box" data-lightbox="work">
                     <!-- <img src="./images/" alt="work" class="image"> -->
                 </a>
             </div>
