--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- NOTE Navbar -->
     <header class="header-left wow slideInLeft" id="navbar-collapse-toggle">
         <div class="top">
-            <a href="">T</a>
+            <a href="#home">T</a>
         </div>
         <ul class="nav nav-menu">
             <li>
@@ -63,7 +63,7 @@
             </li>
 
             <li>
-                <a href="#projects" class="nav-link" data-toggle="tooltip" title="WORK">
+                <a href="#project" class="nav-link" data-toggle="tooltip" title="WORK">
                     <h6>Projects</h6>
                 </a>
             </li>
@@ -186,7 +186,7 @@
                                                 <span>19 Years</span>
                                             </li>
                                             <li>
-                                                <label>Address:</label>
+                                                <label>Location:</label>
                                                 <span>Milwaukee</span>
                                             </li>
                                         </ul>
@@ -436,12 +436,6 @@
                                 </p>
                             </div>
                             <ul>
-                                <li class="media">
-                                    <i class="fa fa-map"></i>
-                                    <span class="media-body">
-                                        11221 Synergy Dr Ste 410, Wauwatosa, WI 53222
-                                    </span>
-                                </li>
                                 <li class="media">
                                     <i class="fa fa-envelope"></i>
                                     <span class="media-body">
