changed the title

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                             <h6>Hello, My Name is</h6>
                             <h1>Tsuyoshi Harayama</h1>
                             <p class="lead">
-                                Web Developer | UX/UI Designer
+                                Software Engineer
                             </p>
                             <p class="desc">
-                                Self-taught Web Developer based in Wisconsin.
+                                Self-taught Software Engineer based in Wisconsin.
                             </p>
                             <div class="btn-bar">
                                 <a href="./images/MyResume.pdf" target="_blank">Download CV</a>
