--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
     <!-- NOTE About Me -->
     <br><br><br><br>
     <div class="wrap">
-        <section class="content" id="about">
+        <section class="content " id="about">
             <div class="container fade-in">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="about-me hidden">
+                        <div class="about-me reveal">
                             <div class="img" data-wow-duration="0.5s">
                                 <img src="./images/profile-pic.HEIC" alt="">
                             </div>
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                     <div class="col-lg-7 ml-auto">
-                        <div class="about-info hidden">
+                        <div class="about-info reveal">
                             <div class="title">
                                 <h3>About Me</h3>
                             </div>
@@ -230,7 +230,7 @@
                 <div class="col-lg-4 wow bounceInLeft">
                     <div class="box1">
                         <i class="icon icon-mobile"></i>
-                        <div class="content hidden">
+                        <div class="content reveal">
                             <br>
                             <h5>UI/UX Design</h5>
                             <p>
@@ -246,7 +246,7 @@
                 <div class="col-lg-4 wow bounceInUp">
                     <div class="box1 box2">
                         <i class="icon icon-desktop"></i>
-                        <div class="content hidden">
+                        <div class="content reveal">
                             <br>
                             <h5>Web Development</h5>
                             <p>
@@ -261,7 +261,7 @@
                 <div class="col-lg-4 wow bounceInRight">
                     <div class="box1 box2">
                         <i class="icon icon-target"></i>
-                        <div class="content hidden">
+                        <div class="content reveal">
                             <br>
                             <h5>Software Development</h5>
                             <p>
@@ -277,10 +277,10 @@
         <br><br>
         <div class="separated"></div>
         <!-- NOTE Skills -->
-        <section class="mh-skills hidden content" id="skills">
+        <section class="mh-skills content" id="skills">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 hidden">
+                    <div class="col-md-6 reveal">
                         <div class="title">
                             <h3>Experience & Skills</h3>
                         </div>
@@ -307,8 +307,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 hidden">
-                        <!-- <div class="mh-professional-skills"> -->
+                    <div class="col-md-6 reveal">
                         <div class="title">
                             <h3>Technical Skills</h3>
                         </div>
@@ -361,7 +360,7 @@
             <div class="separated"></div>
         </section>
         <!-- NOTE Projects -->
-        <section class="project hidden content" id="project">
+        <section class="project content reveal" id="project">
             <div class="title">
                 <h3>See My Projects</h3>
             </div>
@@ -417,8 +416,8 @@
         </section>
         <div class="separated"></div>
         <!-- NOTE Contact -->
-        <section class="hidden content" id="contact">
-            <div class="container">
+        <section class="content" id="contact">
+            <div class="container reveal">
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="contact-info">
@@ -493,7 +492,7 @@
             <br><br>
             <!-- NOTE Google Map -->
             <div class="col-12">
-                <div class="google-map container">
+                <div class="google-map container reveal">
                     <div class="embed-responsive embed">
                         <p>
                             <iframe
