--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                             <br><br>
                             <div class='bio'>
                                 <p>
-                                    My name is Tsuyoshi Harayama. I was born and raised in Japan, graduated from boot
+                                    My name is Tsuyoshi (soo-yoshi). I was born and raised in Japan, graduated from
+                                    coding boot
                                     camp,
                                     and a self-taught programmer
                                     based in Wisconsin. Coding is one of my favorite things to do because you can never
@@ -293,10 +294,10 @@
                                             prject-based learning in a fast-paced Agile enviroment. I was the part of
                                             cycle 8, where I was considered as one of the
                                             top performers in the cycle, mainly on the technical front. During my time
-                                            at i.c.stars, I've extablished myself as a
+                                            at i.c.stars, I've established myself as a
                                             leader where I have helped almost everyone within the cycle with at least 1
                                             problem, even the staff. Being a resident,
-                                            my role now is to develop more leaders in the upcoming Cycle 9 by teaching
+                                            my role now is to develop more leaders in the upcoming Cycles by teaching
                                             JavaScript, React, and mentoring one of the
                                             interns.</p>
                                     </li>
