--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="project-container hidden">
 
 
-                <a href="https://rococo-shortbread-e6146b.netlify.app/" target="blank" class="project-box web hidden"
+                <a href="https://rococo-shortbread-e6146b.netlify.app/" target="blank" class="project-box all web"
                     data-lightbox="work">
                     <img src="./images/calculator-project.png" alt="work" class="image">
                     <div class="middle">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://stellar-phoenix-be2467.netlify.app/" target="blank" class="project-box web hidden"
+                <a href="https://stellar-phoenix-be2467.netlify.app/" target="blank" class="project-box all web"
                     data-lightbox="work">
                     <img src="./images/piggame-project.png" alt="work" class="image">
                     <div class="middle">
@@ -392,7 +392,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://boring-thompson-fde54b.netlify.app/" target="blank" class="project-box web hidden"
+                <a href="https://boring-thompson-fde54b.netlify.app/" target="blank" class="project-box all web"
                     data-lightbox="work">
                     <img src="./images/portfolio-project.png" alt="work" class="image">
                     <div class="middle">
@@ -401,8 +401,14 @@
                         </div>
                     </div>
                 </a>
-                <a href="4.png" class="project-box" data-lightbox="work">
-                    <!-- <img src="./images/" alt="work" class="image"> -->
+                <a href="https://glittering-tartufo-8daa1b.netlify.app/" target="blank" class="project-box all web"
+                    data-lightbox="work">
+                    <img src="./images/blog.png" alt="work" class="image">
+                    <div class="middle">
+                        <div class="text">
+                            Blog Website
+                        </div>
+                    </div>
                 </a>
                 <a href="5.png" class="project-box" data-lightbox="work">
                     <!-- <img src="./images/" alt="work" class="image"> -->
