added reveal in work

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="separated"></div>
         <div class="container hidden content" id="work">
             <!-- NOTE Works -->
-            <div class="title">
+            <div class="title reveal">
                 <h3>What I do ?</h3>
             </div>
             <br><br><br>
