--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                             <h6>Hello, My Name is</h6>
                             <h1>Tsuyoshi Harayama</h1>
                             <p class="lead">
-                                Software Engineer
+                                Full Stack Developer
                             </p>
                             <p class="desc">
-                                Self-taught Software Engineer based in Wisconsin.
+                                Self-taught Full STack Developer based in Wisconsin.
                             </p>
                             <div class="btn-bar">
                                 <a href="./images/MyResume.pdf" target="_blank">Download CV</a>
@@ -127,7 +127,7 @@
                                 <img src="./images/profile-pic.HEIC" alt="">
                             </div>
                             <div class="info">
-                                <p>Web Developer</p>
+                                <p>Full Stack Developer</p>
                                 <h3>Tsuyoshi Harayama</h3>
                             </div>
                             <div class="nav social-icons justify-content-center">
