--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                             </li>
                                             <li>
                                                 <label>Email:</label>
-                                                <span>tharayama@gmail.com</span>
+                                                <span>tharayama81@gmail.com</span>
                                             </li>
                                             <li>
                                                 <label>LinkedIn:</label>
@@ -438,7 +438,7 @@
                                 <li class="media">
                                     <i class="fa fa-envelope"></i>
                                     <span class="media-body">
-                                        tharayama@icstars.org
+                                        tharayama81@gmail.com
                                     </span>
                                 </li>
                                 <li class="media">
@@ -500,8 +500,9 @@
                     <div class="embed-responsive embed">
                         <p>
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2914.3353460951184!2d-88.0555583839864!3d43.07644467914521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050594799e5e11%3A0x2a3c104f455d8594!2sSynergy%20at%20the%20Mayfair%20Collection!5e0!3m2!1sen!2sus!4v1646775820839!5m2!1sen!2sus"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46636.01492363548!2d-88.06056642313392!3d43.0677056611622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8805049521e53143%3A0x7d4ce15527e8daad!2sWauwatosa%2C%20WI!5e0!3m2!1sen!2sus!4v1649086800265!5m2!1sen!2sus"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </p>
                     </div>
                 </div>
